--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -1,4 +1,5 @@
 # Copyright (c) 2013-2016 The Bitcoin Core developers
+# Copyright (c) 2025 The Mewmint Core developers
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
@@ -100,10 +101,13 @@ QT_MOC = \
   qt/overviewpage.moc \
   qt/rpcconsole.moc
 
-QT_QRC_CPP = qt/qrc_bitcoin.cpp
-QT_QRC = qt/bitcoin.qrc
-QT_QRC_LOCALE_CPP = qt/qrc_bitcoin_locale.cpp
-QT_QRC_LOCALE = qt/bitcoin_locale.qrc
+QT_QRC_CPP = qt/qrc_mewmint.cpp
+QT_QRC = qt/mewmint.qrc
+QT_QRC_LOCALE_CPP = qt/qrc_mewmint_locale.cpp
+QT_QRC_LOCALE = qt/mewmint_locale.qrc
+
+BITCOIN_RC = qt/res/mewmint-qt-res.rc
+
 
 BITCOIN_QT_H = \
   qt/addressbookpage.h \
@@ -174,9 +178,9 @@ QT_RES_FONTS = \
 QT_RES_ICONS = \
   qt/res/icons/add.png \
   qt/res/icons/address-book.png \
-  qt/res/icons/bitcoin.ico \
-  qt/res/icons/bitcoin_testnet.ico \
-  qt/res/icons/bitcoin.png \
+  qt/res/icons/mewmint.ico \
+  qt/res/icons/mewmint_testnet.ico \
+  qt/res/icons/mewmint.png \
   qt/res/icons/chevron.png \
   qt/res/icons/clock1.png \
   qt/res/icons/clock2.png \
